--- a/DiabeticRetinopathy/Crop on IPython Cluster.ipynb
+++ b/DiabeticRetinopathy/Crop on IPython Cluster.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1460,7 +1460,7 @@
        "AElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x142c3ba8>"
+       "<matplotlib.figure.Figure at 0x16b6c080>"
       ]
      },
      "metadata": {},
@@ -1470,9 +1470,9 @@
    "source": [
     "file_name = '21_left.jpeg'\n",
     "\n",
-    "if path.exists(out_path):\n",
-    "    shutil.rmtree(out_path)\n",
-    "os.mkdir(out_path)\n",
+    "#if path.exists(out_path):\n",
+    "#    shutil.rmtree(out_path)\n",
+    "#os.mkdir(out_path)\n",
     "\n",
     "crop(file_name)\n",
     "eye = io.imread(path.join(out_path, file_name))\n",
@@ -1486,8 +1486,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1500,8 +1499,44 @@
     "os.mkdir(out_path)\n",
     "\n",
     "asr = dv.map(crop, files)\n",
-    "asr.wait()\n",
-    "print asr.succesful()"
+    "asr.wait()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'23263_left.jpeg', '40118_left.jpeg'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files_out = set(os.listdir(out_path))\n",
+    "diff = set(files).difference(files_out)\n",
+    "diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "asr = dv.map(crop, diff)\n",
+    "asr.wait()"
    ]
   }
  ],
