Small tweak to directory check

--- a/DiabeticRetinopathy/Resizing.ipynb
+++ b/DiabeticRetinopathy/Resizing.ipynb
@@ -62,8 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 122.17 times longer than the fastest. This could mean that an intermediate result is being cached \n",
-      "10000 loops, best of 3: 143 µs per loop\n"
+      "The slowest run took 158.14 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "10000 loops, best of 3: 136 µs per loop\n"
      ]
     }
    ],
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 459.62 times longer than the fastest. This could mean that an intermediate result is being cached \n",
-      "1 loops, best of 3: 468 µs per loop\n"
+      "The slowest run took 485.36 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "1 loops, best of 3: 455 µs per loop\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 3: 191 ms per loop\n"
+      "1 loops, best of 3: 192 ms per loop\n"
      ]
     }
    ],
@@ -146,8 +146,8 @@
    },
    "outputs": [],
    "source": [
-    "if not os.path.isdir(trg_dir):\n",
-    "    os.mkdir(trg_dir)"
+    "if not os.path.exists(trg_dir):\n",
+    "    os.makedirs(trg_dir)"
    ]
   },
   {
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 5.26 ms per loop\n"
+      "100 loops, best of 3: 5.32 ms per loop\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 1.64 s per loop\n"
+      "1 loops, best of 1: 1.66 s per loop\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 3.14 s per loop\n"
+      "1 loops, best of 1: 3.1 s per loop\n"
      ]
     }
    ],
