--- a/DiabeticRetinopathy/Resizing.ipynb
+++ b/DiabeticRetinopathy/Resizing.ipynb
@@ -10,13 +10,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us set up for parallelization:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on 2 engines\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.parallel import Client\n",
+    "rc = Client()\n",
+    "print \"Running on %d engines\" % len(rc.ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "%%px --local\n",
     "import os\n",
     "import os.path\n",
     "from PIL import Image"
@@ -31,17 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "%%px --local\n",
     "src_dir = \"/kaggle/retina/sample\" # source directory of images to resize \n",
     "trg_dir = \"/kaggle/retina/resized\" # target directory of the resized images \n",
     "prefix = \"resized_\" # string to prepend to the resized file name\n",
     "hsize = 256 # horizontal size of the resized image\n",
-    "vsize = 256 # vertical size of the resized image  "
+    "vsize = 256 # vertical size of the resized image  \n",
+    "all_files = filter(lambda x: x.endswith(\".jpeg\"), os.listdir(src_dir))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us use a single engine first."
    ]
   },
   {
@@ -53,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,13 +100,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 158.14 times longer than the fastest. This could mean that an intermediate result is being cached \n",
-      "10000 loops, best of 3: 136 µs per loop\n"
+      "The slowest run took 79.37 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "10000 loops, best of 3: 134 µs per loop\n"
      ]
     }
    ],
    "source": [
-    "all_files = filter(lambda x: x.endswith(\".jpeg\"), os.listdir(src_dir))\n",
     "filename = all_files[0]\n",
     "filepath = os.path.join(src_dir, filename)\n",
     "%timeit Image.open(filepath)\n",
@@ -84,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -93,14 +130,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 485.36 times longer than the fastest. This could mean that an intermediate result is being cached \n",
-      "1 loops, best of 3: 455 µs per loop\n"
+      "The slowest run took 483.11 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "1 loops, best of 3: 450 µs per loop\n"
      ]
     }
    ],
    "source": [
     "%timeit im.resize((hsize, vsize))\n",
-    "resized_im = im.resize((hsize, vsize))"
+    "resized_im = im.resize((hsize, vsize), Image.NEAREST)"
    ]
   },
   {
@@ -112,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 3: 192 ms per loop\n"
+      "1 loops, best of 3: 191 ms per loop\n"
      ]
     }
    ],
@@ -140,18 +177,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "if not os.path.exists(trg_dir):\n",
-    "    os.makedirs(trg_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
@@ -162,11 +187,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 5.32 ms per loop\n"
+      "100 loops, best of 3: 5.43 ms per loop\n"
      ]
     }
    ],
    "source": [
+    "if not os.path.exists(trg_dir):\n",
+    "    os.makedirs(trg_dir)\n",
+    "    \n",
     "resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
     "%timeit resized_im.save(resized_filepath, \"JPEG\", quality = 100) "
    ]
@@ -175,42 +203,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For quick and dirty experiments we can use the default downsampling. \n",
-    "Here we create downsized copies of all files in the sample directory:"
+    "Let us define functions that do the above in one go:    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 loops, best of 1: 1.66 s per loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def resize_all(method):\n",
-    "    for filename in all_files:\n",
-    "        filepath = os.path.join(src_dir, filename)\n",
-    "        im = Image.open(filepath)\n",
-    "        resized_im = im.resize((hsize, vsize), method)\n",
-    "        resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
-    "        resized_im.save(resized_filepath, \"JPEG\", quality = 100)\n",
-    "        \n",
-    "%timeit -n1 -r1 resize_all(0)"
+    "%%px --local\n",
+    "def resize_method(filename, method):\n",
+    "    filepath = os.path.join(src_dir, filename)\n",
+    "    im = Image.open(filepath)\n",
+    "    resized_im = im.resize((hsize, vsize), method)\n",
+    "    resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
+    "    resized_im.save(resized_filepath, \"JPEG\", quality = 100)          \n",
+    "    \n",
+    "def resize_NEAREST(filename):\n",
+    "    resize_method(filename, Image.NEAREST)\n",
+    "    \n",
+    "def resize_LANCZOS(filename):\n",
+    "    resize_method(filename, Image.LANCZOS)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now try with LANCZOS:"
+    "For quick and dirty experiments we can use the default downsampling. \n",
+    "Here we create downsized copies of all files in the sample directory with two downsampling methods:"
    ]
   },
   {
@@ -224,19 +248,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 3.1 s per loop\n"
+      "1 loops, best of 1: 1.65 s per loop\n",
+      "1 loops, best of 1: 3.15 s per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit -n1 -r1 resize_all(Image.LANCZOS)"
+    "%timeit -n1 -r1 map(resize_NEAREST, all_files)\n",
+    "%timeit -n1 -r1 map(resize_LANCZOS, all_files)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the processing is dominated by the CPU-bound resizing we can benefit from parallelization (forthcoming...)"
+    "Since the processing is dominated by the CPU-bound resizing we can benefit from parallelization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loops, best of 1: 1.02 s per loop\n",
+      "1 loops, best of 1: 1.89 s per loop\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 17 days\n",
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 17 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = rc[:]\n",
+    "%timeit -n1 -r1 v.map_sync(resize_NEAREST, all_files)\n",
+    "%timeit -n1 -r1 v.map_sync(resize_LANCZOS, all_files)"
    ]
   }
  ],
