--- a/DiabeticRetinopathy/Resizing.ipynb
+++ b/DiabeticRetinopathy/Resizing.ipynb
@@ -13,12 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us set up for parallelization:"
+    "Let us set up for parallelization:\n",
+    "\n",
+    "Start cluster with an appropriate number of engines (e.g. on the homepage **Clusters** tab) before running this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on 2 engines\n"
+      "Running on 4 engines\n"
      ]
     }
    ],
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +102,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 79.37 times longer than the fastest. This could mean that an intermediate result is being cached \n",
       "10000 loops, best of 3: 134 µs per loop\n"
      ]
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -130,8 +131,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 483.11 times longer than the fastest. This could mean that an intermediate result is being cached \n",
-      "1 loops, best of 3: 450 µs per loop\n"
+      "The slowest run took 448.15 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "1 loops, best of 3: 457 µs per loop\n"
      ]
     }
    ],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 3: 191 ms per loop\n"
+      "10 loops, best of 3: 191 ms per loop\n"
      ]
     }
    ],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -187,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 5.43 ms per loop\n"
+      "100 loops, best of 3: 5.29 ms per loop\n"
      ]
     }
    ],
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -248,8 +249,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 1.65 s per loop\n",
-      "1 loops, best of 1: 3.15 s per loop\n"
+      "1 loops, best of 1: 1.64 s per loop\n",
+      "1 loops, best of 1: 3.11 s per loop\n"
      ]
     }
    ],
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -276,20 +277,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 1.02 s per loop\n",
-      "1 loops, best of 1: 1.89 s per loop\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Vendor:  Continuum Analytics, Inc.\n",
-      "Package: mkl\n",
-      "Message: trial mode expires in 17 days\n",
-      "Vendor:  Continuum Analytics, Inc.\n",
-      "Package: mkl\n",
-      "Message: trial mode expires in 17 days\n"
+      "1 loops, best of 1: 930 ms per loop\n",
+      "1 loops, best of 1: 1.51 s per loop\n"
      ]
     }
    ],
