--- a/DiabeticRetinopathy/Features/Crop on IPython Cluster.ipynb
+++ b/DiabeticRetinopathy/Features/Crop on IPython Cluster.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -41,19 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "%%px --local\n",
-    "%run edges.py"
+    "%run edges.py\n",
+    "\n",
+    "\n",
+    "in_path = path.normpath('/home/boris/Kaggle/Retina/train/raw')\n",
+    "out_path = path.normpath('/home/boris/Kaggle/Retina/train/cropped')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1460,7 +1464,7 @@
        "AElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x16b6c080>"
+       "<matplotlib.figure.Figure at 0x7fbc01447e90>"
       ]
      },
      "metadata": {},
@@ -1484,11 +1488,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
+      "Wall time: 10 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%time\n",
     "dv = Client()[:]\n",
@@ -1504,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1516,7 +1529,7 @@
        "{'23263_left.jpeg', '40118_left.jpeg'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1529,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
