--- a/DiabeticRetinopathy/CicrularCrop.ipynb
+++ b/DiabeticRetinopathy/CicrularCrop.ipynb
@@ -5126,21 +5126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "mask = np.zeros(img.shape)\n",
+    "mask = np.zeros(img.shape[0:2])\n",
     "rr, cc = circle(center_y, center_x, radius1, img.shape)\n",
     "mask[rr, cc] = 1\n",
-    "img *= mask"
+    "img[:,:,0] *= mask\n",
+    "img[:,:,1] *= mask\n",
+    "img[:,:,2] *= mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -5150,14 +5152,14 @@
     "y_borders = (max(center_y - radius1,0), max(img.shape[0] - center_y - radius1, 0))\n",
     "\n",
     "img2 = util.crop(img, (y_borders, x_borders,  (0,0)))\n",
-    "maskT = util.crop(mask, (y_borders, x_borders,  (0,0)))\n",
+    "maskT = util.crop(mask, (y_borders, x_borders))\n",
     "\n",
     "border_pixels = np.sum(1 - maskT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -5165,10 +5167,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x14c952790>"
+       "<matplotlib.image.AxesImage at 0x12ffc3f90>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6795,7 +6797,7 @@
        "AAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x102bf2690>"
+       "<matplotlib.figure.Figure at 0x12ff73e10>"
       ]
      },
      "metadata": {},
@@ -6822,6 +6824,10 @@
    "outputs": [],
    "source": [
     "def circularcrop(img, border, threshold, threshold1):\n",
+    "    s = np.sum(img, axis=2)\n",
+    "    cols = np.sum(s, axis=0) > threshold  \n",
+    "    rows = np.sum(s, axis=1) > threshold\n",
+    "    \n",
     "    height = rows.shape[0]\n",
     "    width = cols.shape[0]\n",
     "\n",
@@ -6842,16 +6848,18 @@
     "            center_y = math.sqrt( radius**2 - (upper_line_width/2)**2)\n",
     "    radius1 = radius - border    \n",
     "    \n",
-    "    mask = np.zeros(img.shape)\n",
+    "    mask = np.zeros(img.shape[0:2])\n",
     "    rr, cc = circle(center_y, center_x, radius1, img.shape)\n",
     "    mask[rr, cc] = 1\n",
-    "    img *= mask\n",
+    "    img[:,:,0] *= mask\n",
+    "    img[:,:,1] *= mask\n",
+    "    img[:,:,2] *= mask \n",
     "    \n",
     "    x_borders = (center_x - radius1, img.shape[1] - center_x - radius1)\n",
     "    y_borders = (max(center_y - radius1,0), max(img.shape[0] - center_y - radius1, 0))\n",
     "\n",
     "    imgres = util.crop(img, (y_borders, x_borders,  (0,0)))\n",
-    "    maskT = util.crop(mask, (y_borders, x_borders,  (0,0)))\n",
+    "    maskT = util.crop(mask, (y_borders, x_borders))\n",
     "\n",
     "    border_pixels = np.sum(1 - maskT)\n",
     "    \n",
@@ -10555,6 +10563,28 @@
    ],
    "source": [
     "plt.imshow(imgA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2848, 4272)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape[0:2]"
    ]
   },
   {
