First experiments with tSNE
Not very encouraging...

--- a/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
+++ b/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -52,21 +52,58 @@
     "visData = bunch.Bunch()\n",
     "visData.target = data.target\n",
     "visData.data = reduced_X\n",
-    "dim_reduce.vis3D(visData, dotsize = 30) # dotsize can be adjusted to accomodate denser datasets"
+    "dim_reduce.vis3D(visData, title = \"3D PCA\", dotsize = 30)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A 3D scatterplot should display in a separate window. Rotating it by clicking and dragging you can observe that 2D is enough to separate the classes in this case!"
+    "A 3D scatterplot should display in a separate window. Rotating it by clicking and dragging you can observe that 2D is enough to separate the classes in this case! Indeed, let's transform directly to 2D:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=2)  \n",
+    "visData.data = pca.fit_transform(X)\n",
+    "dim_reduce.vis2D(visData, title = \"2D PCA\", dotsize = 30)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly for t-SNE (forthcoming...)"
+    "Similarly for t-SNE:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.manifold import TSNE\n",
+    "tsne = TSNE(n_components=2, init = 'pca', random_state = 0)\n",
+    "visData.data = tsne.fit_transform(X)\n",
+    "\n",
+    "dim_reduce.vis2D(visData, dotsize = 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Apparently t-SNE is not very suitable for this dataset... or we need to tweak more parameters."
    ]
   },
   {
