--- a/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
+++ b/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
     "visData = bunch.Bunch()\n",
     "visData.target = data.target\n",
     "visData.data = reduced_X\n",
-    "dim_reduce.vis3D(visData, title = \"3D PCA\", dotsize = 30)"
+    "dim_reduce.vis3D(visData, title=\"3D PCA\", dotsize=30)"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
    "source": [
     "pca = PCA(n_components=2)  \n",
     "visData.data = pca.fit_transform(X)\n",
-    "dim_reduce.vis2D(visData, title = \"2D PCA\", dotsize = 30)"
+    "dim_reduce.vis2D(visData, title=\"2D PCA\", dotsize=30)"
    ]
   },
   {
@@ -84,17 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from sklearn.manifold import TSNE\n",
-    "tsne = TSNE(n_components=2, init = 'pca', random_state = 0)\n",
-    "visData.data = tsne.fit_transform(X)\n",
-    "\n",
-    "dim_reduce.vis2D(visData, dotsize = 30)"
+    "tsne = TSNE(n_components=2, init='pca', random_state=0)\n",
+    "visData.data = tsne.fit_transform(X,y)\n",
+    "dim_reduce.vis2D(visData)"
    ]
   },
   {
