saving level as is

--- a/DiabeticRetinopathy/Features/Extract Blobs Corners.ipynb
+++ b/DiabeticRetinopathy/Features/Extract Blobs Corners.ipynb
@@ -73,7 +73,7 @@
     "    image_name = get_image_name(file_name)\n",
     "    level = labels[labels['image'] == image_name]['level'].iloc[0]\n",
     "\n",
-    "    return np.array([blobs.shape[0], corners.shape[0], int(level != 0)])"
+    "    return np.array([blobs.shape[0], corners.shape[0], level])"
    ]
   },
   {
@@ -85,13 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0, 857,   0], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "in_path = path.normpath('/Kaggle/Retina/train/stum')\n",
+    "in_path = path.normpath('/Kaggle/Retina/train/raw')\n",
     "\n",
     "file_name = path.join(in_path, '457_left.jpeg')\n",
     "process_single_image(file_name)"
