--- a/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
+++ b/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -84,35 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from sklearn.manifold import TSNE\n",
-    "tsne = TSNE(n_components=2, init='pca', random_state=0)\n",
+    "tsne = TSNE(n_components=3, random_state=0, learning_rate = 100)\n",
     "visData.data = tsne.fit_transform(X,y)\n",
-    "dim_reduce.vis2D(visData)"
+    "dim_reduce.vis3D(visData, title=\"3D t-SNE\", dotsize=30)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "Apparently t-SNE is not very suitable for this dataset... or we need to tweak more parameters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
