Example of OpenCV GPU CLAHE

--- a/DiabeticRetinopathy/Features/Extract Blobs Corners.ipynb
+++ b/DiabeticRetinopathy/Features/Extract Blobs Corners.ipynb
@@ -124,20 +124,10 @@
    "outputs": [],
    "source": [
     "dv = Client()[:]\n",
-    "files = [path.join(sample_train, f) for f in os.listdir(in_path)]\n",
-    "len = length(files)\n",
-    "asr = dv.map(process_single_image, files[:len/2])\n",
-    "final = reduce(lambda state, x: np.vstack((state, x)), asr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "files = [path.join(sample_train , f) for f in os.listdir(sample_train)]\n",
+    "lenf = len(files)\n",
+    "asr = dv.map(process_single_image, files[:lenf/2])\n",
+    "final = reduce(lambda state, x: np.vstack((state, x)), asr)\n",
     "final.tofile('/users/boris/Dropbox/Kaggle/retina/Blobs_Corners_0.bin')"
    ]
   }
