Histogram spec starting.

--- a/DiabeticRetinopathy/Features/Color Map by Histogram and Contour Finding.ipynb
+++ b/DiabeticRetinopathy/Features/Color Map by Histogram and Contour Finding.ipynb
@@ -57,7 +57,7 @@
     "  2. Find contours\n",
     "  3. Find the joining convex hull\n",
     "  4. Create a mask for this hull. The mask is resized to the final image size\n",
-    "3. Apply Histogram Specification to normalize color maps\n",
+    "3. Apply [Histogram Specification](http://fourier.eng.hmc.edu/e161/lectures/contrast_transform/node3.html) to normalize color maps\n",
     "  1. Compute CDF of the reference image\n",
     "  2. Compute CDF of the input image\n",
     "  3. Create a mapping from refrence to image CDF\n",
@@ -4200,6 +4200,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Prepare: PyrDown & Blurr"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {
@@ -4214,6 +4221,13 @@
     "\n",
     "ref_image = pyr_blurr(ref_image)\n",
     "images = map(lambda i: pyr_blurr(i), images)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Find the Eye"
    ]
   },
   {
@@ -8499,7 +8513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -8531,6 +8545,20 @@
     "    \n",
     "    # returning the hull to illustrate a few issues below\n",
     "    return cv2.resize(mask, (size, size)), hull"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Histogram Specification\n",
+    "1. Create histograms: reference image, input image\n",
+    "2. Create CDFs:\n",
+    "We are using the trick that OpenCV uses in their implementation of histogram equalization.\n",
+    "CDF is defined as $H_i= {1 \\over |I|} \\sum\\limits_{j=0}^{i}h_j$, where $h_j$ is the j-th bin of histogram $h$\n",
+    "Here we define it instead as $H_i= {1 \\over {|I| - h_k}} \\sum\\limits_{j = k}^{i}h_j$, where $k: \\left \\{ \\begin {array}{11} 0  & \\mbox{if } h_0 \\neq 0 \\\\{l} & \\mbox{if } h_{l-1} = 0\\end{array}\n",
+    "\\right.$, i.e., we completely drop the first non-zero bin.\n",
+    "3. Map image to reference, i.e. for color $i$ in the input image, find color $j$ in the output: $\\DeclareMathOperator*{\\argmin}{\\arg\\!\\min} j = \\argmin_{k}{|H^{inp}_i - H^{ref}_j|}$"
    ]
   }
  ],
