--- a/DiabeticRetinopathy/Features/Color Map by Histogram and Contour Finding.ipynb
+++ b/DiabeticRetinopathy/Features/Color Map by Histogram and Contour Finding.ipynb
@@ -64,8 +64,7 @@
     "  3. Create a mapping from refrence to image CDF\n",
     "  4. Realize mapping\n",
     "4. Apply CLAHE on the V channel of the image, converted to HSV.\n",
-    "5. Resize to 256x256\n",
-    "6. Apply the mask (above) to clean up the background"
+    "5. Apply the mask (above) to clean up the background"
    ]
   },
   {
@@ -6139,7 +6138,7 @@
        "EREREZFX/X924ag3TOwyPgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x3914748>"
+       "<matplotlib.figure.Figure at 0x39990b8>"
       ]
      },
      "metadata": {},
@@ -8184,7 +8183,7 @@
        "SUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x3914400>"
+       "<matplotlib.figure.Figure at 0x399f358>"
       ]
      },
      "metadata": {},
@@ -10660,7 +10659,7 @@
        "dAVBEDqIiK4gCEIHEdEVBEHoIP8BPbBD+nDShfAAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x3914f28>"
+       "<matplotlib.figure.Figure at 0x3999d30>"
       ]
      },
      "metadata": {},
@@ -12378,7 +12377,7 @@
        "1hNeHmsbgAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x3b96b70>"
+       "<matplotlib.figure.Figure at 0x3c08dd8>"
       ]
      },
      "metadata": {},
@@ -12460,7 +12459,7 @@
        "AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x938e4e0>"
+       "<matplotlib.figure.Figure at 0xaa07f60>"
       ]
      },
      "metadata": {},
@@ -12669,7 +12668,7 @@
        "wJD/DznoFrj855A6AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x9327e48>"
+       "<matplotlib.figure.Figure at 0xa608828>"
       ]
      },
      "metadata": {},
@@ -12832,7 +12831,7 @@
        "SUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x9471f28>"
+       "<matplotlib.figure.Figure at 0xa903160>"
       ]
      },
      "metadata": {},
@@ -12971,7 +12970,7 @@
        "DARlAAAYCMoAADAQlAEAYCAoAwDAQFAGAIDB/wc/bxrx5YeafgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x9a709e8>"
+       "<matplotlib.figure.Figure at 0x1bc0c908>"
       ]
      },
      "metadata": {},
@@ -13045,8 +13044,6 @@
     "    return np.array(l)\n",
     "\n",
     "# compute and apply color map on all channels of the image\n",
-    "# also, our map was mapping the background as well, since we don't need it -\n",
-    "# mask it off!\n",
     "def map_image(image, refHist, imageHist):\n",
     "    # each of the arguments contains histograms over 3 channels\n",
     "    mp = np.array([getMin(r, i) for (r, i) in zip(refHist, imageHist)])\n",
@@ -13065,7 +13062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -14195,7 +14192,7 @@
        "fdu319L24LJv+7Zvr6XtwWXf9m3fXkvbg8u+7du+vZb2/wMtqqpOC5/togAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1bbe6ac8>"
+       "<matplotlib.figure.Figure at 0x1bedd780>"
       ]
      },
      "metadata": {},
@@ -17993,7 +17990,7 @@
        "4v8HuUpUxZEzlyYAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xceb8908>"
+       "<matplotlib.figure.Figure at 0x1b8f1908>"
       ]
      },
      "metadata": {},
@@ -21721,7 +21718,7 @@
        "GIZhGMYryv8HK9izubeyf7MAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1c0acfd0>"
+       "<matplotlib.figure.Figure at 0xce0ccf8>"
       ]
      },
      "metadata": {},
@@ -21755,7 +21752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -24372,7 +24369,7 @@
        "RwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1ba4b0b8>"
+       "<matplotlib.figure.Figure at 0x1c3a1e80>"
       ]
      },
      "metadata": {},
@@ -24402,7 +24399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -24468,7 +24465,7 @@
        "eAM0SLwBGiTeAA0Sb4AGiTdAg8QboEHiDdAg8QZo0P8DBamY02UKnA0AAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1b752278>"
+       "<matplotlib.figure.Figure at 0xce0c128>"
       ]
      },
      "metadata": {},
@@ -24591,7 +24588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -26021,7 +26018,7 @@
        "Q4a3EP8PnB4drLlyFpwAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x21141278>"
+       "<matplotlib.figure.Figure at 0xce0cc88>"
       ]
      },
      "metadata": {},
@@ -27326,7 +27323,7 @@
        "e4opppjiHYwJvKeYYoop3sH4/wDzvkie6WqYqAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x21141518>"
+       "<matplotlib.figure.Figure at 0xce0cac8>"
       ]
      },
      "metadata": {},
@@ -28633,7 +28630,7 @@
        "GPAMYiDvAQMGDHgGMZD3gAEDBjyD+P8BOyWOj6dhocIAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1be3fb70>"
+       "<matplotlib.figure.Figure at 0x1bbfea58>"
       ]
      },
      "metadata": {},
@@ -28667,7 +28664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -28702,7 +28699,7 @@
        "KogVUEGsgAp/AolPlxJXVPA8AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xcb15a90>"
+       "<matplotlib.figure.Figure at 0x1c18b748>"
       ]
      },
      "metadata": {},
@@ -29505,7 +29502,7 @@
        "0g48O+2000473ZX+PwuKdylOa6bHAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1c1b50f0>"
+       "<matplotlib.figure.Figure at 0x1be8fb00>"
       ]
      },
      "metadata": {},
@@ -30513,7 +30510,7 @@
        "BvEMDAwMDBwo/i9VqO24qoZIKQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1c1b5128>"
+       "<matplotlib.figure.Figure at 0xdcba438>"
       ]
      },
      "metadata": {},
@@ -31518,7 +31515,7 @@
        "DBwoBvEMDAwMDBwo/h9ShwdghMVV4QAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1b7ca710>"
+       "<matplotlib.figure.Figure at 0xda22b38>"
       ]
      },
      "metadata": {},
