--- a/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
+++ b/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -92,9 +92,18 @@
    "source": [
     "from sklearn.manifold import TSNE\n",
     "tsne = TSNE(n_components=3, random_state=0, learning_rate = 100)\n",
-    "visData.data = tsne.fit_transform(X,y)\n",
+    "visData.data = tsne.fit_transform(X)\n",
     "dim_reduce.vis3D(visData, title=\"3D t-SNE\", dotsize=30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
