--- a/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
+++ b/DiabeticRetinopathy/Dimensions/DimReductionDemo.ipynb
@@ -9,11 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 30 days\n",
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 30 days\n"
+     ]
+    }
+   ],
    "source": [
     "# You want to be able to rotate scatterplots in 3D, so don't show them inline \n",
     "%matplotlib tk\n",
@@ -34,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
