Update Resizing nb to use parallel cluster

--- a/DiabeticRetinopathy/Features/Resizing.ipynb
+++ b/DiabeticRetinopathy/Features/Resizing.ipynb
@@ -10,23 +10,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start a cluster with an appropriate number of engines (= number of CPUs on your box) on the homepage **Clusters** tab before executing the next cell (you might need to restart the kernel). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cluster with 8 engines.\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "import os.path\n",
-    "from PIL import Image"
+    "from IPython.parallel import Client\n",
+    "rc = Client()\n",
+    "print \"Using cluster with %d engines.\" % len(rc.ids)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us set the parameters in one place:"
+    "Let us set up imports and parameters in one place for the cluster and the local engine:"
    ]
   },
   {
@@ -37,11 +52,17 @@
    },
    "outputs": [],
    "source": [
+    "%%px --local\n",
+    "import os\n",
+    "import os.path\n",
+    "from PIL import Image\n",
+    "\n",
     "src_dir = \"/kaggle/retina/sample\" # source directory of images to resize \n",
     "trg_dir = \"/kaggle/retina/resized\" # target directory of the resized images \n",
     "prefix = \"resized_\" # string to prepend to the resized file name\n",
     "hsize = 256 # horizontal size of the resized image\n",
-    "vsize = 256 # vertical size of the resized image  "
+    "vsize = 256 # vertical size of the resized image  \n",
+    "all_files = filter(lambda x: x.endswith(\".jpeg\"), os.listdir(src_dir))"
    ]
   },
   {
@@ -62,16 +83,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 122.17 times longer than the fastest. This could mean that an intermediate result is being cached \n",
-      "10000 loops, best of 3: 143 µs per loop\n"
+      "1 loops, best of 1: 11.7 ms per loop\n"
      ]
     }
    ],
    "source": [
-    "all_files = filter(lambda x: x.endswith(\".jpeg\"), os.listdir(src_dir))\n",
     "filename = all_files[0]\n",
     "filepath = os.path.join(src_dir, filename)\n",
-    "%timeit Image.open(filepath)\n",
+    "%timeit -n1 -r1 Image.open(filepath)\n",
     "im = Image.open(filepath)"
    ]
   },
@@ -93,14 +112,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 459.62 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "The slowest run took 448.26 times longer than the fastest. This could mean that an intermediate result is being cached \n",
       "1 loops, best of 3: 468 µs per loop\n"
      ]
     }
    ],
    "source": [
     "%timeit im.resize((hsize, vsize))\n",
-    "resized_im = im.resize((hsize, vsize))"
+    "resized_im = im.resize((hsize, vsize), Image.NEAREST)"
    ]
   },
   {
@@ -121,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 3: 191 ms per loop\n"
+      "1 loops, best of 3: 192 ms per loop\n"
      ]
     }
    ],
@@ -144,31 +163,51 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loops, best of 1: 9.49 ms per loop\n"
+     ]
+    }
+   ],
    "source": [
-    "if not os.path.isdir(trg_dir):\n",
-    "    os.mkdir(trg_dir)"
+    "if not os.path.exists(trg_dir):\n",
+    "    os.makedirs(trg_dir)\n",
+    "    \n",
+    "resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
+    "%timeit -n1 -r1 resized_im.save(resized_filepath, \"JPEG\", quality = 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us define functions that do the above in one go for all files:    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 loops, best of 3: 5.26 ms per loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
-    "%timeit resized_im.save(resized_filepath, \"JPEG\", quality = 100) "
+    "%%px --local\n",
+    "def resize_method(filename, method):\n",
+    "    filepath = os.path.join(src_dir, filename)\n",
+    "    im = Image.open(filepath)\n",
+    "    resized_im = im.resize((hsize, vsize), method)\n",
+    "    resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
+    "    resized_im.save(resized_filepath, \"JPEG\", quality = 100)\n",
+    "\n",
+    "def resize_NEAREST(filename):\n",
+    "    resize_method(filename, Image.NEAREST)\n",
+    "\n",
+    "def resize_LANCZOS(filename):\n",
+    "    resize_method(filename, Image.LANCZOS)"
    ]
   },
   {
@@ -176,7 +215,7 @@
    "metadata": {},
    "source": [
     "For quick and dirty experiments we can use the default downsampling. \n",
-    "Here we create downsized copies of all files in the sample directory:"
+    "Here we create downsized copies of all files in the sample directory with two downsampling methods:"
    ]
   },
   {
@@ -190,27 +229,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 1.64 s per loop\n"
+      "1 loops, best of 1: 1.66 s per loop\n",
+      "1 loops, best of 1: 3.15 s per loop\n"
      ]
     }
    ],
    "source": [
-    "def resize_all(method):\n",
-    "    for filename in all_files:\n",
-    "        filepath = os.path.join(src_dir, filename)\n",
-    "        im = Image.open(filepath)\n",
-    "        resized_im = im.resize((hsize, vsize), method)\n",
-    "        resized_filepath = os.path.join(trg_dir, prefix + filename)\n",
-    "        resized_im.save(resized_filepath, \"JPEG\", quality = 100)\n",
-    "        \n",
-    "%timeit -n1 -r1 resize_all(0)"
+    "%timeit -n1 -r1 map(resize_NEAREST, all_files)\n",
+    "%timeit -n1 -r1 map(resize_LANCZOS, all_files)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now try with LANCZOS:"
+    "Since the processing is dominated by the CPU-bound resizing we can benefit from parallelization:"
    ]
   },
   {
@@ -224,19 +257,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loops, best of 1: 3.14 s per loop\n"
+      "1 loops, best of 1: 938 ms per loop\n",
+      "1 loops, best of 1: 1.67 s per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit -n1 -r1 resize_all(Image.LANCZOS)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since the processing is dominated by the CPU-bound resizing we can benefit from parallelization (forthcoming...)"
+    "v = rc[:]\n",
+    "%timeit -n1 -r1 v.map_sync(resize_NEAREST, all_files)\n",
+    "%timeit -n1 -r1 v.map_sync(resize_LANCZOS, all_files)"
    ]
   }
  ],
