Extract test features

--- a/DiabeticRetinopathy/Features/Extract Features for Training.ipynb
+++ b/DiabeticRetinopathy/Features/Extract Features for Training.ipynb
@@ -43,10 +43,10 @@
     "import time\n",
     "\n",
     "labels_file =  '/kaggle/retina/trainLabels.csv'\n",
-    "root = '/kaggle/retina/reduced/train'\n",
+    "root = '/kaggle/retina/reduced/test'\n",
     "\n",
-    "masks_dir = '/kaggle/retina/train/prepmasks'\n",
-    "features_path = '/kaggle/retina/reduced/features/train'\n",
+    "masks_dir = '/kaggle/retina/test/prepmasks'\n",
+    "features_path = '/kaggle/retina/reduced/features/test'\n",
     "prefix = 'features'\n",
     "\n",
     "def get_predicted_region(im, marker):\n",
@@ -55,7 +55,20 @@
     "    return res\n",
     "\n",
     "names = pd.read_csv(labels_file)\n",
-    "n_bins = 100"
+    "n_bins = 100\n",
+    "isTest = True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prep_out_path(features_path)\n",
+    "files = os.listdir(root)\n"
    ]
   },
   {
@@ -66,20 +79,11 @@
    },
    "outputs": [],
    "source": [
-    "prep_out_path(features_path)\n",
-    "files = os.listdir(root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "def get_areal_features(f):\n",
-    "    label = names.loc[names['image'] == path.splitext(f)[0]]\n",
+    "    if not isTest:\n",
+    "        label = names.loc[names['image'] == path.splitext(f)[0]]\n",
+    "    else:\n",
+    "        label = path.splitext(f)[0]\n",
     "    start = time.time()\n",
     "    imr = ImageReader(root, f, masks_dir, gray_scale = True)\n",
     "\n",
@@ -104,13 +108,16 @@
     "\n",
     "    outp = np.r_[outp, hist_druzen]\n",
     "    outp = np.r_[outp, hist_blood]\n",
-    "    outp = np.r_[outp, label.values[0]]\n",
+    "    if not isTest:\n",
+    "        outp = np.r_[outp, label.values[0]]\n",
+    "    else:\n",
+    "        outp = np.r_[outp, [label, -1]]        \n",
     "    return outp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -118,31 +125,38 @@
     {
      "data": {
       "text/plain": [
-       "array([78, 87, 51, 30, 19, 13, 11, 10, 5, 9, 4, 5, 4, 5, 3, 1, 2, 5, 2, 3,\n",
-       "       5, 1, 0, 1, 4, 0, 1, 1, 0, 0, 2, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 116, 68, 28, 22, 21, 13, 4, 5, 5,\n",
-       "       1, 2, 3, 2, 5, 4, 2, 3, 0, 2, 1, 1, 2, 0, 1, 1, 0, 0, 0, 2, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       '16_left', 4L], dtype=object)"
+       "array(['40', '31', '20', '13', '4', '6', '4', '1', '2', '0', '0', '0', '1',\n",
+       "       '2', '0', '0', '2', '2', '0', '1', '0', '1', '1', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '2', '0', '0', '0', '1', '0',\n",
+       "       '0', '1', '1', '0', '0', '0', '0', '0', '1', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '32', '1', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '1', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '1',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0',\n",
+       "       '0', '0', '0', '0', '0', '1_left', '-1'], \n",
+       "      dtype='|S11')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = '16_left.png'\n",
+    "f = '1_left.png'\n",
     "get_areal_features(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -156,15 +170,6 @@
     "\n",
     "df.to_csv(path.join(features_path, prefix + \".csv\"), index = False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
